--- a/districts/kannur.html
+++ b/districts/kannur.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kozhikode</title>
+    <title>kannur</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <div class="col-xl-12 rounded">
@@ -23,7 +23,7 @@
         <!-- Navigation section -->
         <div class="row nav-padding">
         <div class="col-xl-3 d-flex justify-content-start">
-            <img src="/Images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+            <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
             <div class="d-flex flex-column align-self-center name-banner">
             <h4>keralatourism.org</h4>
             <p>Welcome to God's own country</p>
@@ -32,45 +32,51 @@
         <div class="col-xl-9 d-flex justify-content-end">
             <ul class="d-flex flex-row nav-links justify-content-between">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/login.html">Login</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="/navigation/login.html">Login</a></li>
+            <li><a href="/navigation/signup.html">Sign Up</a></li>
+            <li><a href="/navigation/contactus.html">Contact Us</a></li>
+            <li><a href="/navigation/aboutus.html">About Us</a></li>
             </ul>
         </div>
         </div>
         <!-- content section -->
-        <div class="d-flex justify-content-center title-content">
-            <h1>Places to visit in Kozhikode</h1>
+        <div class="row title-content d-flex align-items-center">
+            <div class="col-xl-1"></div>
+            <div class="col-xl-3 d-flex justify-content-start">
+                <a href="/navigation/explore.html">
+                    <img src="/images/back-button.png" alt="Back button link">Back to districts
+                </a>
+            </div>
+            <div class="col-xl-8 d-flex justify-content-start">
+                <h1>Places to visit in Kannur</h1>
+            </div>
         </div>
         <div class="row">
             <div class="col-xl-4 explore-places">
-                <img src="Images/kozhikodebeach.jpg" alt="Kozhikode Beach">
-                <h6>Kozhikode Beach</h6>
+                <img src="/images/payyambalambeach.jpg" alt="Payyambalam Beach">
+                <h6>Payyambalam Beach</h6>
             </div>
             <div class="col-xl-6 places-content">
                 <p>
-                    Kozhikode Beach or Calicut Beach is a beach on the western side of Kozhikode, situated on the Malabar Coast of India.
-                    The beach is accessible through four road overbridges in the city. The beach has paved stones and illumination.
-                    There is one Lions Park for the children and an aquarium.
-                    Kozhikode beach has always been a prominent place for conducting public meetings.
-                    The beach road was renamed 'Gandhi Road' in 1934 after Gandhi visited Calicut in 1934.
+                    Payyambalam beach is a beautiful spot located in the district of Kannur.
+                    It is one among the five beaches that is collectively known as Kannur beach.
+                    The Payyambalam Beach is an impeccably maintained destination in Kannur.
+                    This secluded location is known for providing one with the opportunity to simply relax or enjoy a family picnic in absolute tranquillity.
+                    Surfing and swimming options are also available for those who seek a little adventure.
                 </p>
-                      
             </div>
         </div>
         <div class="row">
             <div class="col-xl-2"></div>
             <div class="col-xl-6 places-content">
                 <p> 
-                    Kozhippara Falls also known as Kakkadampoyil Falls is a waterfalls in the Malappuram district in Kerala, India.
-                    It is located in Kakkadampoyil near the Silent Valley National Park on the north eastern border of the Malappuram district.
-                    The waterfalls is looked after by the Kerala forest department that comes within the Edavanna Forest Range.
+                    A popular hilltop destination, Palakkayam Thattu offers an amazing view at 3,500ft above sea level.
+                    Towering trees, rolling hills and fluffy white clouds in the wide blue yonder make it one of the most sought-after trekking destinations in South India.
                 </p>
             </div>
             <div class="col-xl-4 explore-places">
-                <img src="Images/kozhipparawaterfalls.jpg" alt="kozhippara Falls">
-                <h6>kozhippara Falls</h6>
+                <img src="/images/palakkayamthattu.jpg" alt="Palakkayam Thattu">
+                <h6>Palakkayam Thattu</h6>
             </div>
         </div>
     </div>
