--- a/districts/kasargod.html
+++ b/districts/kasargod.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>idukki</title>
-    
+    <title>kasargod</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <div class="col-xl-12 rounded">
@@ -24,7 +23,7 @@
         <!-- Navigation section -->
         <div class="row nav-padding">
         <div class="col-xl-3 d-flex justify-content-start">
-            <img src="/Images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+            <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
             <div class="d-flex flex-column align-self-center name-banner">
             <h4>keralatourism.org</h4>
             <p>Welcome to God's own country</p>
@@ -33,29 +32,34 @@
         <div class="col-xl-9 d-flex justify-content-end">
             <ul class="d-flex flex-row nav-links justify-content-between">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/login.html">Login</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="/navigation/login.html">Login</a></li>
+            <li><a href="/navigation/signup.html">Sign Up</a></li>
+            <li><a href="/navigation/contactus.html">Contact Us</a></li>
+            <li><a href="/navigation/aboutus.html">About Us</a></li>
             </ul>
         </div>
-        </div> 
+        </div>
         <!-- content section -->
-        <div class="d-flex justify-content-center title-content">
-            <h1>Places to visit in Idukki</h1>
+        <div class="row title-content d-flex align-items-center">
+            <div class="col-xl-1"></div>
+            <div class="col-xl-3 d-flex justify-content-start">
+                <a href="/navigation/explore.html">
+                    <img src="/images/back-button.png" alt="Back button link">Back to districts
+                </a>
+            </div>
+            <div class="col-xl-8 d-flex justify-content-start">
+                <h1>Places to visit in Kasargod</h1>
+            </div>
         </div>
         <div class="row">
             <div class="col-xl-4 explore-places">
-                <img src="Images/idukkidam.jpg" alt="Idukki Dam">
-                <h6>Idukki Dam</h6>
+                <img src="/images/bekalfort.jpg" alt="Bekal Fort">
+                <h6>Bekal Fort</h6>
             </div>
             <div class="col-xl-6 places-content">
                 <p>
-                    The Idukki Dam is a double curvature arch dam constructed across the Periyar River in a narrow gorge between two granite hills locally known as Kuravan and Kurathi in Idukki, Kerala, India. At 168.91 metres, it is one of the highest arch dams in Asia.
-                    It is constructed and owned by the Kerala State Electricity Board.
-                    Earlier, there was a blanket ban on public entry to the dam due to security reasons.
-                    Later, it was relaxed opening the dam for public for 10 days during the Onam and the Christmas seasons.
-
+                    Bekal Fort, is the largest fort in Kerala, situated at Bekal, Pallikera village in Hosdurg Taluk in Kasaragod district, Kerala and it is 65 km from Mangalore city spreading over 40 acres.
+                    Built using laterite slabs and with a polygonal shape, the fort rises 130 feet above sea level and is situated on a headland spanning 35km.
                 </p>
             </div>
         </div>
@@ -63,17 +67,15 @@
             <div class="col-xl-2"></div>
             <div class="col-xl-6 places-content">
                 <p> 
-                    Ramakkalmedu is a historic site with a monument to Kuravan and Kurathi, a large statue that depicts the Sangam Period and Sangam landscape of Kerala and Tamil Nadu.
-                    Ramakkalmedu is a hill station located about 15 Km from Nedumkandom.
-                    The main tourism importance of this place is the presence of excellent wind from TamilNadu.
-                    Rolling green hills and the fresh mountain air make Ramakalmedu an enchanting retreat.
-                    The place is noted for its panoramic beauty and numerous windmills.
-                    Tourist attractions such as Tortoise Rock, Kuravan Hills, Rama Rock, Wind Mills Viewpoint, Soolapara Hill, and Hyderamala Hills are all part of the Ramakkalmedu tourism circuit.
+                    A paradise for nature lovers and a fine ranked in the list of tourist places in Kasaragod.
+                    It is a natural habitat of some underrated fauna like a slow turtle, the prickly porcupine, Malabar hornbill, Slender loris, and the cute wild jungle cat.
+                    If wilderness attracts you, this locale is a must visit for some great wildlife photography.
+                    Hike around the sanctuary and click around some rare species. 
                 </p>
             </div>
             <div class="col-xl-4 explore-places">
-                <img src="Images/ramakkalmedu.jpg" alt="Ramakkalmedu">
-                <h6>Ramakkalmedu</h6>
+                <img src="/images/parappawildlifesanctuary.jpg" alt="Parappa Wildlife Sanctuary">
+                <h6>Parappa Wildlife Sanctuary</h6>
             </div>
         </div>
     </div>
