--- a/districts/trivandrum.html
+++ b/districts/trivandrum.html
@@ -6,7 +6,7 @@
     <title>Trivandrum</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <div class="col-xl-12 rounded">
@@ -23,7 +23,7 @@
         <!-- Navigation section -->
         <div class="row nav-padding">
         <div class="col-xl-3 d-flex justify-content-start">
-            <img src="/Images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+            <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
             <div class="d-flex flex-column align-self-center name-banner">
             <h4>keralatourism.org</h4>
             <p>Welcome to God's own country</p>
@@ -32,20 +32,28 @@
         <div class="col-xl-9 d-flex justify-content-end">
             <ul class="d-flex flex-row nav-links justify-content-between">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/login.html">Login</a></li>
-            <li><a href="signup.html">Sign Up</a></li>
-            <li><a href="contactus.html">Contact Us</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="/navigation/login.html">Login</a></li>
+            <li><a href="/navigation/signup.html">Sign Up</a></li>
+            <li><a href="/navigation/contactus.html">Contact Us</a></li>
+            <li><a href="/navigation/aboutus.html">About Us</a></li>
             </ul>
         </div>
         </div>
         <!-- content section -->
-        <div class="d-flex justify-content-center title-content">
-            <h1>Places to visit in Trivandrum</h1>
+        <div class="row title-content d-flex align-items-center">
+            <div class="col-xl-1"></div>
+            <div class="col-xl-3 d-flex justify-content-start">
+                <a href="/navigation/explore.html">
+                    <img src="/images/back-button.png" alt="Back button link">Back to districts
+                </a>
+            </div>
+            <div class="col-xl-8 d-flex justify-content-start">
+                <h1>Places to visit in Thiruvananthapuram</h1>
+            </div>
         </div>
         <div class="row">
             <div class="col-xl-4 explore-places">
-                <img src="Images/padmanabhaswamytemple.jpg" alt="Padmanabhaswamy temple">
+                <img src="/images/padmanabhaswamytemple.jpg" alt="Padmanabhaswamy temple">
                 <h6>Sree Padmanabhaswamy Temple</h6>
             </div>
             <div class="col-xl-6 places-content">
@@ -70,13 +78,13 @@
                 </p>
             </div>
             <div class="col-xl-4 explore-places">
-                <img src="Images/azhimala.jpg" alt="Aazhimala temple">
+                <img src="/images/azhimala.jpg" alt="Aazhimala temple">
                 <h6>Aazhimala Siva Temple</h6>
             </div>
         </div>
         <div class="row">
             <div class="col-xl-4 explore-places">
-                <img src="Images/kovalam.jpg" alt="Kovalam beach">
+                <img src="/images/kovalam.jpg" alt="Kovalam beach">
                 <h6>Kovalam Beach</h6>
             </div>
             <div class="col-xl-6 places-content">
@@ -104,7 +112,7 @@
                 </p>
             </div>
             <div class="col-xl-4 explore-places">
-                <img src="Images/ponmudi.jpg" alt="Aazhimala temple">
+                <img src="/images/ponmudi.jpg" alt="Aazhimala temple">
                 <h6>Ponmudi Hill Station</h6>
             </div>
         </div>
