--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
   <div class="col-xl-12 rounded"> 
@@ -25,7 +25,7 @@
     <!-- Navigation section -->
     <div class="row nav-padding">
       <div class="col-xl-3 d-flex justify-content-start">
-        <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+        <img src="./images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
         <div class="d-flex flex-column align-self-center name-banner">
           <h4>keralatourism.org</h4>
           <p>Welcome to God's own country</p>
@@ -33,11 +33,11 @@
       </div>
       <div class="col-xl-9 col-sm-9 d-flex justify-content-end">
         <ul class="d-flex flex-row nav-links justify-content-between" id="navbarNavAltMarkup">
-          <li><a href="/index.html" class="active">Home</a></li>
-          <li><a href="/navigation/login.html">Login</a></li>
-          <li><a href="/navigation/signup.html">Sign Up</a></li>
-          <li><a href="/navigation/contactus.html">Contact Us</a></li>
-          <li><a href="/navigation/aboutus.html">About Us</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="./navigation/login.html">Login</a></li>
+          <li><a href="./navigation/signup.html">Sign Up</a></li>
+          <li><a href="./navigation/contactus.html">Contact Us</a></li>
+          <li><a href="./navigation/aboutus.html">About Us</a></li>
         </ul>
         <!-- <nav class="navbar navbar-expand-lg" style="background-color: unset!important;">
           <div class="container-fluid">
@@ -62,7 +62,7 @@
         <p>Discover the most</p>
         <p>fascinating waterworld</p>
         <p>on Earth...</p>
-        <a href="/navigation/explore.html" class="btn btn-outline-light explore-btn ">Explore</a>
+        <a href="./navigation/explore.html" class="btn btn-outline-light explore-btn ">Explore</a>
     </div>
 
     
