updated Images folder path

--- a/navigation/explore.html
+++ b/navigation/explore.html
@@ -24,7 +24,7 @@
     <!-- Navigation section -->
     <div class="row nav-padding">
       <div class="col-xl-3 d-flex justify-content-start">
-        <img src="/images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
+        <img src="Images/keralaTourismLogo.jpg" alt="Kerala Tourism Logo" height="75">
         <div class="d-flex flex-column align-self-center name-banner">
           <h4>keralatourism.org</h4>
           <p>Welcome to God's own country</p>
@@ -58,19 +58,19 @@
             <div class="row">
               <div class="col-xl-4 explore-district">
                   <a href="./districts/trivandrum.html">
-                    <img src="./Images/trivandrum.jpg" alt="Trivandrum">
+                    <img src="Images/trivandrum.jpg" alt="Trivandrum">
                     <p>Click here to explore more in Trivandrum</p>
                   </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/kollam.html">
-                  <img src="./Images/kollam.jpg" alt="Kollam">
+                  <img src="Images/kollam.jpg" alt="Kollam">
                   <p>Click here to explore more in Kollam</p>
                 </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/pathanamthitta.html">
-                  <img src="./Images/pathanamthitta.jpg" alt="Pathanamthitta">
+                  <img src="Images/pathanamthitta.jpg" alt="Pathanamthitta">
                   <p>Click here to explore more in Pathanamthitta</p>
                 </a>
               </div>
@@ -79,13 +79,13 @@
               <div class="col-xl-2"></div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/alappuzha.html">
-                  <img src="./Images/alappuzha.jpg" alt="Alappuzha">
+                  <img src="Images/alappuzha.jpg" alt="Alappuzha">
                   <p>Click here to explore more in Alappuzha</p>
                 </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/kottayam.html">
-                  <img src="./Images/Kottayam.jpg" alt="Kottayam">
+                  <img src="Images/Kottayam.jpg" alt="Kottayam">
                   <p>Click here to explore more in Kottayam</p>
                 </a>
               </div>
@@ -96,19 +96,19 @@
             <div class="row">
               <div class="col-xl-4 explore-district">
                   <a href="./districts/idukki.html">
-                    <img src="./Images/Idukki.jpg" alt="Idukki">
+                    <img src="Images/Idukki.jpg" alt="Idukki">
                     <p>Click here to explore more in Idukki</p>
                   </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/ernakulam.html">
-                  <img src="./Images/Ernakulam.jpg" alt="Ernakulam">
+                  <img src="Images/Ernakulam.jpg" alt="Ernakulam">
                   <p>Click here to explore more in Ernakulam</p>
                 </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/thrissur.html">
-                  <img src="./Images/thrissur.jpg" alt="Thrissur">
+                  <img src="Images/thrissur.jpg" alt="Thrissur">
                   <p>Click here to explore more in Thrissur</p>
                 </a>
               </div>
@@ -117,13 +117,13 @@
               <div class="col-xl-2"></div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/palakkad.html">
-                  <img src="./Images/Palakkad.jpg" alt="Palakkad">
+                  <img src="Images/Palakkad.jpg" alt="Palakkad">
                   <p>Click here to explore more in Palakkad</p>
                 </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/malappuram.html">
-                  <img src="./Images/malappuram.jpg" alt="Malappuram">
+                  <img src="Images/malappuram.jpg" alt="Malappuram">
                   <p>Click here to explore more in Malappuram</p>
                 </a>
               </div>
@@ -134,19 +134,19 @@
             <div class="row">
               <div class="col-xl-4 explore-district">
                   <a href="./districts/kozhikode.html">
-                    <img src="./Images/kozhikode.jpg" alt="Kozhikode">
+                    <img src="Images/kozhikode.jpg" alt="Kozhikode">
                     <p>Click here to explore more in Kozhikode</p>
                   </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/wayanad.html">
-                  <img src="./Images/wayanad.jpg" alt="Wayanad">
+                  <img src="Images/wayanad.jpg" alt="Wayanad">
                   <p>Click here to explore more in Wayanad</p>
                 </a>
               </div>
               <div class="col-xl-4 explore-district">
                 <a href="./districts/kannur.html">
-                  <img src="./Images/kannur.jpg" alt="Kannur">
+                  <img src="Images/kannur.jpg" alt="Kannur">
                   <p>Click here to explore more in Kannur</p>
                 </a>
               </div>
@@ -154,7 +154,7 @@
             <div class="row">
               <div class="col-xl-12 explore-district">
                 <a href="./districts/kasargod.html">
-                  <img src="./Images/kasargod.jpg" alt="Kasargod">
+                  <img src="Images/kasargod.jpg" alt="Kasargod">
                   <p>Click here to explore more in Kasargod</p>
                 </a>
               </div>
