navigation path changes

--- a/navigation/aboutus.html
+++ b/navigation/aboutus.html
@@ -32,10 +32,10 @@
           <div class="col-xl-9 d-flex justify-content-end">
             <ul class="d-flex flex-row nav-links justify-content-between">
               <li><a href="../index.html">Home</a></li>
-              <li><a href="navigation/login.html">Login</a></li>
-              <li><a href="navigation/signup.html">Sign Up</a></li>
-              <li><a href="navigation/contactus.html">Contact Us</a></li>
-              <li><a href="navigation/aboutus.html" class="active">About Us</a></li>
+              <li><a href="../navigation/login.html">Login</a></li>
+              <li><a href="../navigation/signup.html">Sign Up</a></li>
+              <li><a href="../navigation/contactus.html">Contact Us</a></li>
+              <li><a href="../navigation/aboutus.html" class="active">About Us</a></li>
             </ul>
           </div>
         </div>
