--- a/navigation/login.html
+++ b/navigation/login.html
@@ -32,10 +32,10 @@
             <div class="col-xl-9 d-flex justify-content-end">
                 <ul class="d-flex flex-row nav-links justify-content-between">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="navigation/login.html" class="active">Login</a></li>
-                <li><a href="navigation/signup.html">Sign Up</a></li>
-                <li><a href="navigation/contactus.html">Contact Us</a></li>
-                <li><a href="navigation/aboutus.html">About Us</a></li>
+                <li><a href="../navigation/login.html" class="active">Login</a></li>
+                <li><a href="../navigation/signup.html">Sign Up</a></li>
+                <li><a href="../navigation/contactus.html">Contact Us</a></li>
+                <li><a href="../navigation/aboutus.html">About Us</a></li>
                 </ul>
             </div>
         </div>
@@ -47,7 +47,7 @@
                 <div class="d-flex justify-content-center title-content">
                     <h1>Welcome back!</h1>
                 </div>
-                <form action="navigation/explore.html" class="login-content">
+                <form action="../navigation/explore.html" class="login-content">
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Email address</label>
                       <input type="email" class="form-control" id="exampleInputEmail1">
